# korablinbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  heroku.yml  pyproject.toml  run_polling.py  setup_webhook.py
app/: celery.py  settings.py  urls.py
tgbot/: apps.py  bot.py  urls.py  views.py
tgbot/handlers/: __init__.py
tgbot/utils/: compute_manager.py  minecraft_waiter.py
utils/: __init__.py
