[tool.poetry]
name = "korablibot"
version = "0.1.0"
description = "Advanced toys for real boys"
authors = ["Arist0craft <dimnktn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
python-telegram-bot = "^13.9"
django-dotenv = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
